[design] 에러 메세지 크기 수정

--- a/code-kookmin/src/styles/LoginForm.css
+++ b/code-kookmin/src/styles/LoginForm.css
@@ -11,7 +11,7 @@
     color: red;
     margin-top: 5px;
     text-align: right;
-    font-size: small;
+    font-size: x-small;
 }
 
 .login-form div {
