--- a/code-kookmin/src/styles/findPWForm.css
+++ b/code-kookmin/src/styles/findPWForm.css
@@ -9,7 +9,7 @@
     color: red;
     margin-top: 5px;
     text-align: right;
-    font-size: small;
+    font-size: x-small;
 }
 
 .findPW-form div {
