[rename] 클래스네임 변경

--- a/code-kookmin/src/styles/loginPage.css
+++ b/code-kookmin/src/styles/loginPage.css
@@ -1,10 +1,10 @@
-.body {
+.login-body {
     display: block;
     margin-top: 100px;
     margin-bottom: 100px;
 }
 
-.title {
+.login-title {
     text-align: center;
     font-size: 30px;
     font-weight: 750;
