--- a/code-kookmin/src/styles/loginForm.css
+++ b/code-kookmin/src/styles/loginForm.css
@@ -1,5 +1,3 @@
-/* LoginForm.css */
-
 .login-form {
     max-width: 270px;
     text-align: center;
@@ -7,7 +5,7 @@
     padding: 20px;
 }
 
-.error-message {
+.login-form .error-message {
     color: red;
     margin-top: 5px;
     text-align: right;
