[feat] 글 수정 페이지 제작

--- a/code-kookmin/src/styles/community.css
+++ b/code-kookmin/src/styles/community.css
@@ -102,7 +102,7 @@
 #community-contents {
     display: flex;
     width: 1044px;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     flex-direction: row;
 }
 
