--- a/code-kookmin/src/styles/ranking.css
+++ b/code-kookmin/src/styles/ranking.css
@@ -1,11 +1,88 @@
 .tier-small {
-    width: 24px;
-    height: 35px;
-    margin-top: -10px;
+  width: 24px;
+  height: 35px;
+  margin-top: -10px;
 }
 
 .no-tier-img {
-    width: 26px;
-    height: 33px;
-    margin: -5px 5px 0;
+  width: 26px;
+  height: 33px;
+  margin: -5px 5px 0;
 }
+/* 
+.ranking-table-main {
+  margin: 0 auto;
+  width: fit-content;
+}
+
+.ranking-table {
+  width: 100%;
+  display: flex;
+}
+
+.ranking-table-top {
+  background-color: #f7f7f9;
+  justify-content: center;
+  align-items: center;
+  height: 45px;
+  border: 1px solid #dddfe0;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+}
+.ranking-table-top div {
+  min-width: 100px;
+  text-align: center;
+  margin-right: 30px;
+}
+
+.ranking-table-detail {
+  background-color: white;
+  justify-content: center;
+  align-items: center;
+  border-right: 1px solid #dddfe0;
+  border-left: 1px solid #dddfe0;
+  height: 50px;
+  border-bottom: 1px solid #dddfe0;
+}
+.ranking-table-detail__div {
+  min-width: 100px;
+  text-align: center;
+  margin-right: 30px;
+}
+
+.ranking-table-bottom {
+  background-color: #f7f7f9;
+  justify-content: center;
+  align-items: center;
+  height: 45px;
+  border-right: 1px solid #dddfe0;
+  border-left: 1px solid #dddfe0;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+.ranking-tier-div {
+  margin-top: 10px;
+}
+
+.ranking-table__rank {
+  margin-top: 1.5px;
+}
+.ranking-table__tier-id {
+  width: 200px;
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
+  margin-right: 30px;
+}
+
+.ranking-table__id {
+  min-width: 100px;
+  margin-right: 30px;
+  display: flex;
+  align-items: center;
+}
+
+.ranking-table-top__id {
+    margin-left: 60px;
+} */
