--- a/code-kookmin/src/styles/recommend.css
+++ b/code-kookmin/src/styles/recommend.css
@@ -5,405 +5,424 @@
 } */
 
 .pagetitle {
-    height: 80px;
-    flex-shrink: 0;
-    margin-top: 6px;
-    padding: 20px 16px;
+  height: 80px;
+  flex-shrink: 0;
+  margin-top: 6px;
+  padding: 20px 16px;
 }
 
 .pagetitle-header {
-    background-color: white;
-    border-bottom: 1px solid lightgray;
-    display: flex;
-    flex-direction: row;
-    padding: 0px 60px 15px;
+  background-color: white;
+  border-bottom: 1px solid lightgray;
+  display: flex;
+  flex-direction: row;
+  padding: 0px 60px 15px;
 }
 
 .pagetitle-title {
-    font-size: x-large;
-    font-weight: bolder;
-    margin-right: 7px;
+  font-size: x-large;
+  font-weight: bolder;
+  margin-right: 7px;
 }
 
 .pagetitle-question {
-    margin-top: 3px;
-    color: lightgray;
-    cursor: pointer;
+  margin-top: 3px;
+  color: lightgray;
+  cursor: pointer;
 }
 
 .tooltip-section h3 {
-    font-size: 17px;
-    font-weight: bold;
-    margin-bottom: 5px;
+  font-size: 17px;
+  font-weight: bold;
+  margin-bottom: 5px;
 }
 
 .pagetitle-question-container {
-    position: relative;
-    display: inline-block;
+  position: relative;
+  display: inline-block;
 }
 
 .tooltip-divider {
-    border-top: 1px solid #E4E4E4;
-    /* hr의 테두리 색상 변경 */
-    margin: 8px 0;
+  border-top: 1px solid #e4e4e4;
+  /* hr의 테두리 색상 변경 */
+  margin: 8px 0;
 }
 
 .pagetitle-tooltip {
-    background-color: white;
-    color: black;
-    text-align: left;
-    border-radius: 6px;
-    padding: 10px;
-    position: absolute;
-    z-index: 1;
-    top: calc(100%);
-    left: 70%;
-    transform: translateX(-50%);
-    opacity: 0;
-    transition: opacity 0.3s;
-    width: 250px;
-    border: 1px solid #E4E4E4;
-    letter-spacing: -0.34px;
-    line-height: 27.625px;
-
+  background-color: white;
+  color: black;
+  text-align: left;
+  border-radius: 6px;
+  padding: 10px;
+  position: absolute;
+  z-index: 1;
+  top: calc(100%);
+  left: 70%;
+  transform: translateX(-50%);
+  opacity: 0;
+  transition: opacity 0.3s;
+  width: 250px;
+  border: 1px solid #e4e4e4;
+  letter-spacing: -0.34px;
+  line-height: 27.625px;
 }
 
-
 .pagetitle-question-container:hover .pagetitle-tooltip {
-    opacity: 1;
-    /* 호버 시 툴팁이 나타남 */
+  opacity: 1;
+  /* 호버 시 툴팁이 나타남 */
 }
 
 .pagetitle-sort {
-    display: flex;
-    flex-direction: row;
-    padding: 4px 60px;
-    gap: 4px;
+  display: flex;
+  flex-direction: row;
+  padding: 4px 60px;
+  gap: 4px;
 }
 
 .pagetitle-menu {
-    display: flex;
-    text-decoration: none;
-    color: #35414b;
-    align-items: center;
-    justify-content: center;
-    font-weight: 600;
-    width: 110px;
-    height: 45px;
-    border: 0;
-    background-color: white;
-    border-radius: 4px;
+  display: flex;
+  text-decoration: none;
+  color: #35414b;
+  align-items: center;
+  justify-content: center;
+  font-weight: 600;
+  width: 110px;
+  height: 45px;
+  border: 0;
+  background-color: white;
+  border-radius: 4px;
 }
 
 .pagetitle-menu span {
-    margin-top: 3px;
+  margin-top: 3px;
 }
 
 .pagetitle-menu:hover {
-    background-color: #ECE5FF;
-    transition: 0.2s
+  background-color: #ece5ff;
+  transition: 0.2s;
 }
 
 .pagetitle-menu-selected {
-    background-color: #ECE5FF;
-    color: #794CFF;
-    font-weight: bolder;
+  background-color: #ece5ff;
+  color: #794cff;
+  font-weight: bolder;
 }
-
-
-
 
 /* //smaillist */
 .smalllist-main {
-    display: flex;
-    /* padding: 20px 0px; */
-    flex-direction: column;
-    flex-shrink: 0;
-    overflow-x: auto;
-    table-layout: fixed;
-    word-break: break-all;
-    border: 1px solid #dddfe0;
-}
-
-.smalllist-main table {
-    /* border: 1px solid #9AA4AF; */
-    /* height: 900px; */
+  display: flex;
+  /* padding: 20px 0px; */
+  flex-direction: column;
+  flex-shrink: 0;
+  overflow-x: auto;
+  table-layout: fixed;
+  word-break: break-all;
 }
 
 .smalllist-header {
-    display: flex;
-    min-width: 800px;
-    width: 100%;
-    height: 45px;
-    align-items: flex-end;
-    vertical-align: bottom;
-    background-color: #F7F7F9;
+  display: flex;
+  min-width: 800px;
+  width: 80%;
+  height: 45px;
+  align-items: flex-end;
+  vertical-align: bottom;
+  background-color: #f7f7f9;
+  margin: 0 auto;
+  border: 1px solid #dddfe0;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
 }
-
-.smalllist-header-14 {
-    width: 14%;
+.smalllist-header th {
+  display: table-cell;
+  padding: 12px 8px;
+  text-align: center;
+  font-weight: 700;
 }
 
 .smalllist-header-10 {
-    width: 10%;
+  width: 10%;
 }
-
+.smalllist-header-14 {
+  width: 14%;
+}
+.smalllist-header-20 {
+  width: 20%;
+}
+.smalllist-header-25 {
+  width: 25%;
+}
+.smalllist-header-30 {
+  width: 30%;
+}
 .smalllist-header-57 {
-    width: 57%;
+  width: 57%;
 }
-
+.smalllist-header-40 {
+  width: 40%;
+}
 .smalllist-header-100 {
-    width: 100%;
-}
-
-.smalllist-header th {
-    display: table-cell;
-    border-bottom: 1px solid #dddfe0;
-    padding: 12px 8px;
-    text-align: center;
-    font-weight: 700;
+  width: 100%;
 }
 
 .smalllist-item {
-    display: flex;
-    min-width: 800px;
-    width: 100%;
-    height: 45px;
-    align-items: flex-end;
-    vertical-align: bottom;
-    background-color: white;
+  display: flex;
+  min-width: 800px;
+  width: 80%;
+  height: 45px;
+  align-items: flex-end;
+  vertical-align: bottom;
+  background-color: white;
+  border-bottom: 1px solid #dddfe0;
+  margin: 0 auto;
 }
 
 .smalllist-item td {
-    height: 25px;
-    display: table-cell;
-    border-bottom: 1px solid #dddfe0;
-    padding: 8px;
+  height: 25px;
+  display: table-cell;
+  padding: 8px;
 }
 
 a.smalllist-td:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .smalllist-td-10 {
-    width: 10%;
+  width: 10%;
 }
 
 .smalllist-td-14 {
-    width: 14%;
+  width: 14%;
+}
+.smalllist-td-20 {
+  width: 20%;
+}
+.smalllist-td-25 {
+  width: 25%;
+}
+.smalllist-td-30 {
+  width: 30%;
+}
+.smalllist-td-40 {
+  width: 40%;
 }
 
 .smalllist-td-14 a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .smalllist-td-57 {
-    width: 57%;
+  width: 57%;
 }
 
 .smalllist-td-100 {
-    width: 100%;
+  width: 100%;
 }
 
 .smalllist-td-100 a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .smalllist-td {
-    margin-top: 4px;
-    text-align: center;
+  margin-top: 4px;
+  text-align: center;
 }
-
-
+.smalllist-id {
+  text-align: left;
+}
 /* pagenation */
 .pagenation {
-    display: flex;
-    min-width: 800px;
-    width: 100%;
-    height: 55px;
-    align-items: center;
-    justify-content: center;
-    background-color: #F7F7F9;
+  display: flex;
+  min-width: 800px;
+  width: 80%;
+  margin: 0 auto;
+  height: 55px;
+  align-items: center;
+  justify-content: center;
+  background-color: #f7f7f9;
+  border: 1px solid #dddfe0;
+  border-top: 0px;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 .pagenation button {
-    text-align: center;
-    margin-bottom: 2px;
-    border-width: 2px;
-    border-color: rgb(192, 192, 192);
-    height: 40px;
-    width: 75px;
-    border-radius: 5px;
+  text-align: center;
+  margin-bottom: 2px;
+  border-width: 2px;
+  border-color: rgb(192, 192, 192);
+  height: 40px;
+  width: 75px;
+  border-radius: 5px;
 }
-
 
 /* Small List Detail */
 
 .smalllistdetail-header {
-    height: 120px;
-    padding: 20px 30px;
-    background-color: white;
+  height: 120px;
+  padding: 20px 30px;
+  background-color: white;
 }
 
 .smalllistdetail-header h1 {
-    font-size: xx-large;
-    font-weight: bold;
-    margin-bottom: 30px;
+  font-size: xx-large;
+  font-weight: bold;
+  margin-bottom: 30px;
 }
 
 .smalllistdetail-detail {
-    margin: 20px 30px;
-
+  margin: 20px 30px;
 }
 
 .smalllistdetail-tooltip {
-    margin: 20px 30px;
-    color: #794CFF;
-    cursor: pointer;
-    text-decoration: underline;
-    display: inline;
+  margin: 20px 30px;
+  color: #794cff;
+  cursor: pointer;
+  text-decoration: underline;
+  display: inline;
 }
 
 .smalllistdetail-tooltip-hover {
-    display: block;
-    margin: 5px 30px;
-    width: 600px;
-    background-color: white;
-    position: relative;
-    z-index: 100;
-    border: 1px solid lightgray;
-    padding: 5px 10px;
+  display: block;
+  margin: 5px 30px;
+  width: 600px;
+  background-color: white;
+  position: relative;
+  z-index: 100;
+  border: 1px solid lightgray;
+  padding: 5px 10px;
 }
 
 .smalllistdetail-tooltip-hover h3 {
-    font-weight: bolder;
-    margin: 3px 0;
+  font-weight: bolder;
+  margin: 3px 0;
 }
 
 .smalllistdetail-tooltip-hover span {
-    line-height: 1.6;
+  line-height: 1.6;
 }
 
 .smalllistdetail-main {
-    height: 320px;
-    background-color: white;
-    padding: 0px 30px;
-    display: flex;
-    justify-content: center;
-    overflow: hidden;
+  height: 320px;
+  background-color: white;
+  padding: 0px 30px;
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
 }
 
 .smalllistdetail-main-now {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .smalllistdetail-button {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 100%;
-    background-color: white;
-    font-size: xx-large;
-    color: gray;
-    border: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+  background-color: white;
+  font-size: xx-large;
+  color: gray;
+  border: 0;
 }
 
-.smalllistdetail-main-now {}
+.smalllistdetail-main-now {
+}
 
 .question-box-main {
-    display: flex;
-    margin: 0 30px;
-    min-width: 600px;
+  display: flex;
+  margin: 0 30px;
+  min-width: 600px;
 }
 
 .question-box-line {
-    width: 8px;
-    height: 100px;
-    flex-shrink: 0;
-    background-color: #794CFF;
+  width: 8px;
+  height: 100px;
+  flex-shrink: 0;
+  background-color: #794cff;
 }
 
 .question-box {
-    min-width: 500px;
-    max-width: 750px;
-    height: 275px;
-    background-color: #F6F3FC;
-    padding: 20px 30px;
-    border-radius: 0px 0px 40px 0px;
+  min-width: 500px;
+  max-width: 750px;
+  height: 275px;
+  background-color: #f6f3fc;
+  padding: 20px 30px;
+  border-radius: 0px 0px 40px 0px;
 }
 
 .question-header {
-    display: flex;
-    gap: 5px;
-    margin-bottom: 15px;
+  display: flex;
+  gap: 5px;
+  margin-bottom: 15px;
 }
 
 .question-title {
-    font-size: x-large;
-    font-weight: bold;
+  font-size: x-large;
+  font-weight: bold;
 }
 
 .question-img {
-    width: 23px;
-    height: 27px;
-    margin-top: -1px;
+  width: 23px;
+  height: 27px;
+  margin-top: -1px;
 }
 
-.question-main {}
+.question-main {
+}
 
 .question-main-header {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .question-detail {
-    margin: 10px 15px;
-    max-height: 220px;
-    overflow-y: scroll;
-    font-size: large;
+  margin: 10px 15px;
+  max-height: 220px;
+  overflow-y: scroll;
+  font-size: large;
 }
 
 .question-detail span {
-    margin-bottom: 50px;
+  margin-bottom: 50px;
 }
 
 .question-detail-background {
-    background-color: #35414b;
-    opacity: 0.5;
-    height: 180px;
-    display: flex;
-    justify-content: center;
-    cursor: pointer;
-    border-radius: 0px 0px 35px 0px;
+  background-color: #35414b;
+  opacity: 0.5;
+  height: 180px;
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
+  border-radius: 0px 0px 35px 0px;
 }
 .question-detail-button {
-    background-color: #35414b;
-    font-size:x-large;
-    font-weight: bold;
-    color: white;
-    border: 0;
-    cursor: pointer;
+  background-color: #35414b;
+  font-size: x-large;
+  font-weight: bold;
+  color: white;
+  border: 0;
+  cursor: pointer;
 }
 
 .smalllistdetail-footer {
-    background-color: white;
-    height: 100px;
-    display: flex;
-    justify-content: center;
-    padding-top: 60px;
+  background-color: white;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  padding-top: 60px;
 }
 
 .question-button {
-    width: 200px;
-    height: 60px;
-    font-size: larger;
-    font-weight: bold;
-    color: white;
-    background-color: #936FFF;
-    border: 1px solid #936FFF;
-    border-radius: 5px;
+  width: 200px;
+  height: 60px;
+  font-size: larger;
+  font-weight: bold;
+  color: white;
+  background-color: #936fff;
+  border: 1px solid #936fff;
+  border-radius: 5px;
 }
 
 .question-box-translucent {
-    opacity: 40%;
+  opacity: 40%;
 }
