[fix] 홈페이지 가로스크롤 이슈 해결

--- a/code-kookmin/src/App.css
+++ b/code-kookmin/src/App.css
@@ -26,6 +26,7 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 	padding-top: 105px;
+	overflow-x: hidden;
 }
 ol, ul {
 	list-style: none;
