--- a/code-kookmin/src/components/layouts/Header.css
+++ b/code-kookmin/src/components/layouts/Header.css
@@ -1,22 +1,23 @@
 .header {
     left: 0;
     top: 0;
-    padding: 30px 50px;
-    height: 45px;
+    height: 105px;
     background-color: #fbfafe;
     display: block;
-    position: fixed; /* 또는 'absolute' */
+    position: fixed;
     width: 100%; /* 전체 너비 */
     z-index: 1000; /* 다른 요소들보다 앞에 위치하도록 z-index 설정 */
 }
 
 .header-top {
     display: flex;
+    padding: 30px 50px;
+    padding-bottom: 0px;
+    justify-content: space-between;
 }
 
 .header-top-left {
     float: left;
-    width: 86%;
     text-decoration: none;
 }
 
@@ -67,6 +68,6 @@
     border: transparent;
 }
 
-.dropdown-menu img{
+.dropdown-menu img {
     margin-left: 10px;
 }
