--- a/code-kookmin/src/components/layouts/Header.css
+++ b/code-kookmin/src/components/layouts/Header.css
@@ -3,8 +3,11 @@
     top: 0;
     padding: 30px 50px;
     height: 45px;
-    background-color: #FBFAFE;
+    background-color: #fbfafe;
     display: block;
+    position: fixed; /* 또는 'absolute' */
+    width: 100%; /* 전체 너비 */
+    z-index: 1000; /* 다른 요소들보다 앞에 위치하도록 z-index 설정 */
 }
 
 .header-top {
@@ -30,11 +33,40 @@
 }
 
 .signup {
-  padding: 5px 10px;
+    padding: 5px 10px;
     text-decoration: none;
     font-weight: 700;
     border-radius: 4px;
-    border: 1px solid #ECE5FF;
-    background-color: #ECE5FF;
-    color: #794CFF;
+    border: 1px solid #ece5ff;
+    background-color: #ece5ff;
+    color: #794cff;
+}
+
+.nickname,
+.menu-options {
+    width: 100px;
+    padding: 10px 15px;
+    background-color: white;
+    border: 1px solid #794cff;
+    text-align: center;
+    font-size: 16px;
+    color: #794cff;
+    border-radius: 4px;
+    font-weight: 700;
+}
+
+.menu-options {
+    position: absolute;
+}
+.menu-options li {
+    align-items: center;
+    margin: 10px;
+}
+
+.menu-options button {
+    border: transparent;
+}
+
+.dropdown-menu img{
+    margin-left: 10px;
 }
